--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,113 +3,203 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{chia2024oracle,
+  title={Oracle Separation between Noisy Quantum Polynomial Time and the Polynomial Hierarchy},
+  author={Chia, Nai-Hui and Hsieh, Min-Hsiu and Hung, Shih-Han and Kuo, En-Jui},
+  journal={arXiv preprint arXiv:2405.07137},
+  year={2024}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{kuo2022boson,
+  title={Boson Sampling for Generalized Bosons},
+  author={Kuo, En-Jui and Xu, Yijia and Hangleiter, Dominik and Grankin, Andrey and Hafezi, Mohammad},
+  journal={arXiv preprint arXiv:2204.08389},
+  year={2022}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{kuo2020halperin,
+  title={Halperin states can produce any filling fractions},
+  author={Kuo, En-Jui},
+  journal={arXiv preprint arXiv:2004.09035},
+  year={2020}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{kuo2022decoding,
+  title={Decoding conformal field theories: From supervised to unsupervised learning},
+  author={Kuo, En-Jui and Seif, Alireza and Lundgren, Rex and Whitsitt, Seth and Hafezi, Mohammad},
+  journal={Physical Review Research},
+  volume={4},
+  number={4},
+  pages={043031},
+  year={2022},
+  publisher={APS}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{hung2023computational,
+  title={The Computational Complexity of Quantum Determinants},
+  author={Hung, Shih-Han and Kuo, En-Jui},
+  journal={arXiv preprint arXiv:2302.08083},
+  year={2023}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{hong2022accurate,
+  title={Accurate and efficient quantum computations of molecular properties using daubechies wavelet molecular orbitals: A benchmark study against experimental data},
+  author={Hong, Cheng-Lin and Tsai, Ting and Chou, Jyh-Pin and Chen, Peng-Jen and Tsai, Pei-Kai and Chen, Yu-Cheng and Kuo, En-Jui and Srolovitz, David and Hu, Alice and Cheng, Yuan-Chung and others},
+  journal={PRX Quantum},
+  volume={3},
+  number={2},
+  pages={020360},
+  year={2022},
+  publisher={APS}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{xu2023qubit,
+  title={Qubit-oscillator concatenated codes: Decoding formalism and code comparison},
+  author={Xu, Yijia and Wang, Yixu and Kuo, En-Jui and Albert, Victor V},
+  journal={PRX Quantum},
+  volume={4},
+  number={2},
+  pages={020342},
+  year={2023},
+  publisher={APS}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+
+@article{lu2022entanglement,
+  title={Entanglement cost in topological stabilizer models at finite temperature},
+  author={Lu, Tsung-Cheng and Kuo, En-Jui and Lin, Hung-Hwa},
+  journal={arXiv preprint arXiv:2201.08382},
+  year={2022}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+
+@article{kuo2024energy,
+  title={Energy diffusion in weakly interacting chains with fermionic dissipation assisted operator evolution},
+  author={Kuo, En-Jui and Ware, Brayden and Lunts, Peter and Hafezi, Mohammad and White, Christopher David},
+  journal={Physical Review B},
+  volume={110},
+  number={7},
+  pages={075149},
+  year={2024},
+  publisher={APS}
+}@article{hu2024computational,
+  title={Computational Limits of Low-Rank Adaptation (LoRA) for Transformer-Based Models},
+  author={Hu, Jerry Yao-Chieh and Su, Maojiang and Kuo, En-Jui and Song, Zhao and Liu, Han},
+  journal={arXiv preprint arXiv:2406.03136},
+  year={2024}
+}@article{pan2024cormf,
+  title={CoRMF: Criticality-Ordered Recurrent Mean Field Ising Solver},
+  author={Pan, Zhenyu and Gilani, Ammar and Kuo, En-Jui and Liu, Zhuo},
+  journal={arXiv preprint arXiv:2403.03391},
+  year={2024}
+}
+@article{tsai2022path,
+  title={Path sampling of recurrent neural networks by incorporating known physics},
+  author={Tsai, Sun-Ting and Fields, Eric and Xu, Yijia and Kuo, En-Jui and Tiwary, Pratyush},
+  journal={Nature Communications},
+  volume={13},
+  number={1},
+  pages={7231},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+@article{tsai2020learning,
+  title={Learning molecular dynamics with simple language model built upon long short-term memory neural network},
+  author={Tsai, Sun-Ting and Kuo, En-Jui and Tiwary, Pratyush},
+  journal={Nature communications},
+  volume={11},
+  number={1},
+  pages={5115},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{kuo2022unsupervised,
+  title={Unsupervised learning of interacting topological and symmetry-breaking phase transitions},
+  author={Kuo, En-Jui and Dehghani, Hossein},
+  journal={Physical Review B},
+  volume={105},
+  number={23},
+  pages={235136},
+  year={2022},
+  publisher={APS}
+}
+
+
+@article{chen2018towards,
+  title={Towards spinning Mellin amplitudes},
+  author={Chen, Heng-Yu and Kuo, En-Jui and Kyono, Hideki},
+  journal={Nuclear Physics B},
+  volume={931},
+  pages={291--323},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{chen2017anatomy,
+  title={Anatomy of geodesic Witten diagrams},
+  author={Chen, Heng-Yu and Kuo, En-Jui and Kyono, Hideki},
+  journal={Journal of High Energy Physics},
+  volume={2017},
+  number={5},
+  pages={1--40},
+  year={2017},
+  publisher={Springer}
+}
+@article{kuo2016extremal,
+  title={Extremal RN/CFT in both hands revisited},
+  author={Kuo, En-Jui and Yang, Yi},
+  journal={Physics Letters B},
+  volume={755},
+  pages={249--252},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{kuo2024self,
+  title={Self-Testing Quantum Error Correcting Codes: Analyzing Computational Hardness},
+  author={Kuo, En-Jui and Hsu, Li-Yi},
+  journal={arXiv preprint arXiv:2409.01987},
+  year={2024}
+}
+
+@article{hsu2024quantum,
+  title={Quantum State Tomography via Nonconvex Riemannian Gradient Descent},
+  author={Hsu, Ming-Chien and Kuo, En-Jui and Yu, Wei-Hsuan and Cai, Jian-Feng and Hsieh, Min-Hsiu},
+  journal={Physical Review Letters},
+  volume={132},
+  number={24},
+  pages={240804},
+  year={2024},
+  publisher={APS}
+}
+
+
+@article{liu2024training,
+  title={Training classical neural networks by quantum machine learning},
+  author={Liu, Chen-Yu and Kuo, En-Jui and Lin, Chu-Hsuan Abraham and Chen, Sean and Young, Jason Gemsun and Chang, Yeong-Jar and Hsieh, Min-Hsiu},
+  journal={arXiv preprint arXiv:2402.16465},
+  year={2024}
+}
+
+
+@article{kuo2021quantum,
+  title={Quantum architecture search via deep reinforcement learning},
+  author={Kuo, En-Jui and Fang, Yao-Lung L and Chen, Samuel Yen-Chi},
+  journal={arXiv preprint arXiv:2104.07715},
+  year={2021}
+}
+
+
+@article{liu2024quantum,
+  title={Quantum-Train: Rethinking Hybrid Quantum-Classical Machine Learning in the Model Compression Perspective},
+  author={Liu, Chen-Yu and Kuo, En-Jui and Lin, Chu-Hsuan Abraham and Young, Jason Gemsun and Chang, Yeong-Jar and Hsieh, Min-Hsiu and Goan, Hsi-Sheng},
+  journal={arXiv preprint arXiv:2405.11304},
+  year={2024}
+}
+
+
+@article{lo2025unsupervised,
+  title={Unsupervised Feature Extraction and Reconstruction Using Parameterized Quantum Circuits},
+  author={Lo, Li-An and Hsu, Li-Yi and Kuo, En-Jui},
+  journal={arXiv preprint arXiv:2502.07667},
+  year={2025}
 }
